# reid-graduation-thesis

./: .gitignore  Makefile  README.md  REID_IDSPLIT_BASELINE.md  REID_IDSPLIT_FIX_PLAN.md  STREAMING_FPS_PLAN.md
poc-occlusion/: benchmark_ab.py  docker-compose.yml  test_pipeline.py
poc-occlusion/edge/: pyproject.toml
poc-occlusion/edge/src/: __main__.py  config.py
poc-occlusion/edge/src/detection/: yolo.py
poc-occlusion/edge/src/filtering/: post_skip.py  pre_skip.py
poc-occlusion/edge/src/kafka/: producer.py  serialization.py
poc-occlusion/edge/src/scoring/: tagging.py  visibility.py
poc-occlusion/edge/tests/: test_frame_skipper.py  test_visibility_scorer.py
poc-occlusion/model_serving/: Dockerfile  pyproject.toml
poc-occlusion/model_serving/src/: __main__.py  config.py
poc-occlusion/model_serving/src/api/: app.py
poc-occlusion/model_serving/src/models/: gem_pooling.py  osnet.py
poc-occlusion/worker/: Dockerfile  pyproject.toml
poc-occlusion/worker/src/: __main__.py  config.py
poc-occlusion/worker/src/embedding/: aggregator.py  client.py  gem_pooling.py
poc-occlusion/worker/src/kafka/: consumer.py
poc-occlusion/worker/src/matching/: qdrant_store.py  reid_matcher.py
poc-occlusion/worker/src/scoring/: enhanced_visibility.py
poc-occlusion/worker/src/tracking/: __init__.py  basetrack.py  byte_tracker.py
poc-occlusion/worker/src/tracking/utils/: kalman_filter.py  matching.py
poc-occlusion/worker/src/tracklet/: buffer.py  consistency.py  models.py  selector.py
poc-occlusion/worker/src/utils/: logger.py  ops.py
poc-occlusion/worker/tests/: test_embedding_aggregator.py  test_enhanced_scorer.py  test_qdrant_matcher.py  test_topk_selector.py  test_tracklet_buffer.py  test_tracklet_consistency.py
scripts/: audit_reid_run.py  build_lmbn_ft_bundle.sh  (+15 more)
src/edge/: Dockerfile  README.md  pyproject.toml
src/edge/src/: __main__.py
src/edge/src/core/: config.py
src/edge/src/detection/: detection.py
src/edge/src/filtering/: post_skip.py  pre_skip.py
src/edge/src/kafka/: producer.py  serialization.py
src/edge/src/scoring/: tagging.py  visibility.py
src/edge/src/workers/: main.py
src/edge/tests/: test_frame_skipper.py
src/gateway/: Dockerfile  README.md  pyproject.toml
src/gateway/src/api/: app.py
src/gateway/src/auth/: jwt_handler.py  models.py  rbac.py
src/gateway/src/core/: config.py
src/gateway/src/middleware/: rate_limiter.py
src/gateway/src/proxy/: http_proxy.py  ws_proxy.py
src/gateway/tests/: conftest.py  test_auth.py  test_healthz.py  test_proxy_http.py  test_rate_limiter.py  test_rbac.py
src/inference_engine/: Dockerfile  README.md  pyproject.toml
src/inference_engine/scripts/: export_to_onnx.py
src/inference_engine/src/api/: app.py
src/inference_engine/src/core/: config.py
src/inference_engine/src/models/: attention.py  effb0_gender.py  gem_pooling.py  gender_classifier.py  lightmbn_n.py  multi_attr_classifier.py  osnet.py  osnet_ain.py  standalone_gender.py
src/inference_engine/src/services/: batch_queue.py  model_registry.py  triton_backend.py
src/inference_engine/src/utils/: logger.py
src/inference_engine/tests/: test_endpoints.py
src/query_service/: Dockerfile  README.md  pyproject.toml
src/query_service/src/: __main__.py
src/query_service/src/api/: app.py  deps.py
src/query_service/src/api/routes/: devices.py  occlusion.py  persons.py  search.py  stats.py
src/query_service/src/core/: config.py
src/query_service/src/db/: mongo_client.py  qdrant_client.py  redis_client.py
src/query_service/src/schemas/: query.py
src/query_service/src/services/: minio_urls.py  nl_parser.py  query_executor.py
src/query_service/tests/: test_device_routes.py  test_healthz.py  test_mongo_client.py  test_nl_parser.py  test_person_routes.py  test_query_executor.py  test_search_routes.py  test_stats_routes.py
src/raw_stream/: Dockerfile  pyproject.toml
src/raw_stream/src/: __main__.py  config.py  main.py
src/reid_worker/: Dockerfile  README.md  pyproject.toml
src/reid_worker/src/attributes/: attribute_voter.py  gender_voter.py
src/reid_worker/src/core/: config 2.py  config.py
src/reid_worker/src/embedding/: __init__.py  aggregator.py  client.py  gem_pooling.py
src/reid_worker/src/kafka/: __init__.py  consumer.py  producer.py  serialization.py
src/reid_worker/src/matching/: __init__.py  color_descriptor.py  qdrant_store.py  reid_matcher.py
src/reid_worker/src/persistence/: minio_store.py  mongo_store.py  redis_cache.py
src/reid_worker/src/scoring/: enhanced_visibility.py
src/reid_worker/src/tracking/: __init__.py  basetrack.py  byte_tracker.py
src/reid_worker/src/tracking/utils/: __init__.py  kalman_filter.py  matching.py
src/reid_worker/src/tracklet/: __init__.py  buffer.py  consistency.py  models.py  selector.py
src/reid_worker/src/utils/: logger.py  ops.py
src/reid_worker/src/workers/: main.py
src/reid_worker/tests/: conftest.py  test_attribute_voter.py  test_embedding_aggregator.py  test_enhanced_scorer.py  test_gender_voter.py  test_mongo_store.py  test_output_serialization.py  test_person_id_allocator.py  test_qdrant_matcher.py  test_qdrant_store.py  test_topk_selector.py  test_tracklet_buffer.py  test_tracklet_consistency.py  test_worker_cleanup.py  test_worker_process_tracklet.py
src/streaming/: Dockerfile  README.md  pyproject.toml
src/streaming/src/api/: app.py
src/streaming/src/core/: config.py
src/streaming/src/kafka/: consumer.py
src/streaming/src/services/: broadcaster.py  frame_cache.py  minio_urls 2.py  minio_urls.py
src/streaming/src/workers/: kafka_loop.py
src/streaming/tests/: conftest.py  test_broadcaster.py  test_frame_cache.py  test_healthz.py  test_kafka_loop 2.py  test_kafka_loop.py  test_websocket.py
src/vllm_service/: Dockerfile  README.md  pyproject.toml
src/vllm_service/src/api/: app.py
src/vllm_service/src/core/: config.py
src/vllm_service/src/services/: llm_client.py  query_parser.py  result_summarizer.py
src/vllm_service/src/utils/: logger.py
src/vllm_service/tests/: conftest.py  test_healthz.py  test_query_parser.py
(+126 files in other folders)
