[project]
name = "poc-occlusion-model-serving"
version = "0.1.0"
description = "Model serving for occlusion-aware person Re-ID PoC"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "httpx>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
