[project]
name = "poc-occlusion-worker"
version = "0.1.0"
description = "Worker service for occlusion-aware person Re-ID PoC"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "kafka-python>=2.0.0",
    "avro-python3>=1.10.0",
    "httpx>=0.24.0",
    "torch>=2.0.0",
    "scipy>=1.10.0",
    "lap>=0.4.0",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-asyncio>=0.21.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
