[project]
name = "edge"
version = "0.1.0"
description = "Worker: edge"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "opencv-python-headless>=4.10.0",
  "kafka-python>=2.2.0",
  "avro>=1.12.0",
  "numpy>=1.26.0",
  "ultralytics>=8.3.0",
  "openvino>=2024.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
