[project]
name = "gateway"
version = "0.1.0"
description = "Service: gateway — Auth, rate limiting, reverse proxy for all HTTP/WS traffic"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "python-jose[cryptography]>=3.3.0",
  "websockets>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
