[project]
name = "inference_engine"
version = "0.1.0"
description = "Service: inference_engine — ReID embedding + gender classification model serving"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.30.0",
  "numpy>=1.26.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "Pillow>=10.0.0",
  "python-multipart>=0.0.20",
  "onnxruntime>=1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src"]

# Force CPU-only torch wheels so ARM64 Docker builds don't pull ~1.5GB of NVIDIA CUDA packages.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
