[project]
name = "inference_engine"
version = "0.1.0"
description = "Service: inference_engine — ReID embedding + gender classification model serving"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.30.0",
  # Pinned exactly: the embedding is numerically sensitive to torch/numpy
  # versions. Loose `>=` + a Dockerfile that ignores uv.lock let a rebuild
  # silently pull newer wheels (torch 2.12.1 / numpy 2.4.6), which shifted
  # OSNet embeddings enough to flip borderline gallery matches (~0.78->0.80)
  # and over-merge distinct people. These pins match the uv.lock baseline and
  # keep embeddings bit-stable across rebuilds.
  "numpy==2.4.3",
  "torch==2.12.0",
  "torchvision==0.27.0",
  "Pillow==12.2.0",
  "python-multipart>=0.0.20",
  "onnxruntime==1.26.0",
  # EfficientNet-B0 gender classifier loader (lukemelas layout). Pure-Python, torch-only dep.
  "efficientnet-pytorch==0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src"]

# Force CPU-only torch wheels so ARM64 Docker builds don't pull ~1.5GB of NVIDIA CUDA packages.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
