[project]
name = "query_service"
version = "0.1.0"
description = "Service: query_service"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pymongo>=4.8.0",
  "motor>=3.3.0",
  "qdrant-client>=1.10.0",
  "redis>=6.2.0",
  "minio>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
