[project]
name = "raw_stream"
version = "0.1.0"
description = "Standalone raw-video MJPEG server (independent of the ReID path)"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.30.0",
  "opencv-python-headless>=4.10.0",
  "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
