[project]
name = "reid_worker"
version = "0.1.0"
description = "Worker: reid_worker"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "opencv-python>=4.10.0",
  "kafka-python>=2.2.0",
  "avro>=1.12.0",
  "redis>=6.2.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pymongo>=4.8.0",
  "qdrant-client>=1.10.0",
  "motor>=3.3.0",
  "minio>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
