[project]
name = "vllm_service"
version = "0.1.0"
description = "Service: vllm_service — natural-language query parser. Thin OpenAI-compatible HTTP wrapper exposing POST /parse and POST /summarize for the query_service."
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
